# mcc

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  default.nix  mcc.cabal  package.yaml  stack.yaml
.github/workflows/: haskell-ci.yml  haskell.yml
.stack-work/install/x86_64-osx/lts-11.12/8.2.2/flag-cache/: Cabal-2.0.1.1-ARIl7MGNKZFBAH1HVzpC6s  StateVar-1.1.1.0-7hicwZfZdWh9t78q7QM8bm  base-orphans-0.7-CqEfBQ2VoSwBto5sloaJI4  bifunctors-5.5.2-2xREv4oZtKi8pLC91AmMqx  cabal-doctest-1.0.6-K34z9qJFa9S9lhohNycUoO  case-insensitive-1.2.0.11-DieXAizupZnBb7Wfxln47O  comonad-5.0.3-ANHoI6yZjlkJt0gBwNxqyu  contravariant-1.4.1-JXjDAnKZeh1Db1ZTeevPkj  distributive-0.5.3-F6z9Ydi0AiA6rP8AS0blTR  exceptions-0.8.3-CYMTujxEbkkJnOJ7pW82ZD  free-5.0.2-7MTUQqyNvpUDYBpWVP0GpG  hashable-1.2.7.0-LmYYwdRyxeo1gZdEWccp3y  integer-logarithms-1.0.2.1-KAhnLbvomfTHb5G0xy3U7G  megaparsec-6.4.1-FT3TlMLQkQG9q09QZUuojv  mtl-2.2.2-8XubxMJDT8QLsstvlNotkc  parser-combinators-0.4.0-7gtgQtRzF8dJxVKU85PTIR  primitive-0.6.3.0-CXy1O9sQYlI58rn9KQkFyo  profunctors-5.2.2-9TjgDySFMg5Apx0vNn2nBl  recursion-schemes-5.0.2-Kjgy6yD3Sas6TAsBTkDJrl  scientific-0.3.6.2-6rnRk1GpyYx3J4blnjHqFY  semigroupoids-5.2.2-6B2DuO6DyP7B7bjZzGQ6oB  semigroups-0.18.4-mxkGq2xNPcBC0dj8uuk3q  stm-2.4.5.0-15FdumhhnVEKazIoQZDzp1  tagged-0.8.5-HviTdonkllN1ZD6he1Zn8I  text-1.2.3.0-8nD60G3tOYT3Qi8GaESeB5  th-abstraction-0.2.6.0-KdJUlqAwMfUIgxZVMgLLVd  transformers-base-0.4.4-CrsDENFNf7rEcT9CB0YGwO  transformers-compat-0.5.1.4-EAh8Ccrgitz4vTZtbTPyCM  unordered-containers-0.2.9.0-AID53f8BSxj1wBLxJT9npu
app/: .dir-locals.el  Main.hs
bench/: .dir-locals.el  Bench.hs
docs/: mcc-guide.org  rc-presentation.org
src/: Ast.hs  Codegen.hs  Main.hs  Microc.hs  Parser.hs  Sast.hs  Scanner.hs  Semant.hs  printbig.c  runtime.c
src/Microc/: Ast.hs  Codegen.hs  CodegenUtils.hs  Parser.hs  Parser.y  Sast.hs  Scanner.hs  Scanner.x  Semant.hs  Toplevel.hs  Utils.hs
src/Microc/Parser/: Combinator.hs  Generator.y
src/Microc/Scanner/: Combinator.hs  Generator.x
src/Microc/Semant/: Analysis.hs  Error.hs
tests/: .dir-locals.el  Testall.hs  fail-dead1.mc  fail-expr3.mc  fail-for2.mc  fail-for4.mc  fail-func2.err  fail-func3.mc  fail-func8.mc  fail-nomain.err  test-arith3.mc  test-float3.mc  test-for1.out  test-gcd.mc  test-gcd2.mc  test-ops1.mc
tests/fail/: fail-assign1.err  fail-assign1.mc  fail-assign2.err  fail-assign2.golden  fail-assign2.mc  fail-assign3.err  fail-assign3.golden  fail-assign3.mc  fail-assign4.golden  fail-assign4.mc  fail-cast1.golden  fail-cast1.mc  fail-comp1.err  fail-comp1.mc  fail-dead1.err  fail-dead1.golden  fail-dead2.err  fail-dead2.mc  fail-expr1.err  fail-expr1.golden  fail-expr1.mc  fail-expr2.err  fail-expr2.golden  fail-expr2.mc  fail-expr3.err  fail-expr3.golden  fail-float1.err  fail-float1.golden  fail-float1.mc  fail-float2.err  fail-float2.golden  fail-float2.mc  fail-for1.mc  fail-for3.err  fail-for3.golden  fail-for3.mc  fail-for4.err  fail-for5.err  fail-for5.mc  fail-func1.golden  (+54 more)
tests/pass/: test-add1.mc  test-arith1.mc  test-arith2.mc  test-arith3.mc  test-arr1.mc  test-bitwise-ops.mc  test-fib.mc  test-fib.out  test-float1.mc  test-float2.mc  test-float2.out  test-float3.mc  test-float3.out  test-for1.mc  test-for2.mc  test-func1.mc  test-func2.mc  test-func3.mc  test-func3.out  test-func4.mc  test-func5.mc  test-func6.mc  test-func8.mc  test-func9.mc  test-gcd.mc  test-gcd.out  test-gcd2.mc  test-gcd2.out  test-global1.golden  test-global1.mc  test-global2.mc  test-global3.mc  test-hello.mc  test-hello.out  test-if1.mc  test-if2.mc  test-if3.mc  test-if4.mc  test-if4.out  test-if5.mc  (+28 more)
