name:                mcc
version:             0.1.0.0
synopsis:            A microc compiler in Haskell
description:         This is meant to provide a point of comparison to writing
                     compilers in Ocaml vs Haskell.
homepage:            https://github.com/jmorag/mcc#readme
license:             BSD3
license-file:        LICENSE
author:              Joseph Morag
maintainer:          joseph.morag@columbia.edu
copyright:           2018 Joseph Morag
category:            Compilers/Interpreters
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Microc
  other-modules:       Microc.Ast,
                       Microc.Codegen,
                       Microc.Parser,
                       Microc.Sast,
                       Microc.Scanner,
                       Microc.Semant,
                       Microc.Toplevel
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, FlexibleContexts, FlexibleInstances
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-imports -fno-warn-unused-matches
  build-depends:       base >= 4.7 && < 5,
                       megaparsec >= 6.4.1,
                       mtl >= 2.2,
                       containers,
                       text,
                       llvm-hs-pure >= 6.1 && < 7,
                       llvm-hs-pretty,
                       string-conversions,
                       directory,
                       process,
                       unix

executable mcc
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, FlexibleContexts, FlexibleInstances
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-imports -fno-warn-unused-matches
  build-depends:       base >= 4.7 && < 5,
                       mcc,
                       megaparsec >= 6.4.1,
                       mtl >= 2.2,
                       optparse-applicative,
                       containers,
                       text,
                       llvm-hs-pure >= 6.1 && < 7,
                       llvm-hs-pretty,
                       string-conversions,
                       directory,
                       process,
                       unix

test-suite testall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, tests
  main-is:             Testall.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, FlexibleContexts, FlexibleInstances
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-imports -fno-warn-unused-matches
  build-depends:       base >= 4.7 && < 5,
                       mcc,
                       hspec
